# plasma_wallpaper_asciiquarium

./: CMakeLists.txt  README.md  diagram
src/: CMakeLists.txt  asciiquarium_plugin.cpp  asciiquarium_plugin.h  qmldir
src/pkg/: metadata.desktop
src/pkg/contents/config/: main.xml
src/pkg/contents/ui/: Fish.qml  config.qml  main.qml
